fix color contrast

--- a/src/app/pages/home/typewriter/typewriter.component.scss
+++ b/src/app/pages/home/typewriter/typewriter.component.scss
@@ -14,7 +14,6 @@
 
 .toggle-btn {
   border: none;
-  color: grey;
   background: transparent;
   text-transform: uppercase;
   height: $size24;
